--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Pwa Boilerplate</h1>
+        <!-- <h1>Pwa Boilerplate</h1 > -->
         <img src="images/pwa-logo.png" alt="pwa">
     </header>
 
