--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PWA BOILERPLATE</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header>
